--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
         "linkify-html": "^4.2.0",
         "linkifyjs": "^4.2.0",
         "moment": "^2.30.1",
+        "pdfjs-dist": "^5.3.31",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-circular-progressbar": "^2.1.0",
