--- a/Practise/package.json
+++ b/Practise/package.json
@@ -31,6 +31,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-poppler": "^0.2.1",
     "socket.io": "^4.8.0",
     "start": "^5.1.0",
     "uuid": "^10.0.0"
