--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -35,6 +35,7 @@
         "react-circular-progressbar": "^2.1.0",
         "react-cropper": "^2.3.3",
         "react-dom": "^18.2.0",
+        "react-easy-crop": "^5.5.0",
         "react-ga4": "^2.1.0",
         "react-icons": "^4.7.1",
         "react-image-crop": "^11.0.7",
