--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -52,6 +52,7 @@
         "react-social-icons": "^6.15.0",
         "react-spinners": "^0.15.0",
         "react-toastify": "^10.0.5",
+        "recharts": "^3.1.2",
         "redux-persist": "^6.0.0",
         "rsuite": "^5.55.1",
         "sass": "^1.57.1",
