--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
         "jwt-decode": "^4.0.0",
         "linkify-html": "^4.2.0",
         "linkifyjs": "^4.2.0",
+        "lucide-react": "^0.544.0",
         "moment": "^2.30.1",
         "pdfjs-dist": "^5.3.31",
         "react": "^18.2.0",
