Integrated Razorpay Support Creator feature

--- a/Practise/package.json
+++ b/Practise/package.json
@@ -32,6 +32,7 @@
     "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
     "pdf-poppler": "^0.2.1",
+    "razorpay": "^2.9.6",
     "socket.io": "^4.8.0",
     "start": "^5.1.0",
     "uuid": "^10.0.0"
